# trajectory_broadcaster

./: CMakeLists.txt  package.xml
include/trajectory_broadcaster/: trajectory_broadcaster_node.hpp
launch/: trajectory_broadcaster.launch.xml
src/trajectory_broadcaster/: trajectory_broadcaster_node.cpp
